<resources>
    <string name="app_name">Chores Done</string>

    <!--Labels-->
    <string name="label_no_tasks">Add your first task</string>
    <string name="label_no_rewards">Add your first reward</string>
    <string name="label_balance">Balance</string>

    <!--Fields hints-->
    <string name="hint_user_name">Name</string>
    <string name="hint_task_name">Title</string>
    <string name="hint_task_value">Value</string>
    <string name="hint_reward_name">Title</string>

    <!--Buttons-->
    <string name="btn_delete">Delete</string>
    <string name="btn_tasks">Tasks</string>
    <string name="btn_create">Create</string>
    <string name="btn_rewards">Rewards</string>

    <!--Screen titles-->
    <string name="screen_title_rewards">Rewards</string>
    <string name="screen_title_tasks">Tasks</string>
    <string name="screen_title_new_reward">New Reward</string>
    <string name="screen_title_new_task">New Task</string>
    <string name="internet_connection_failed">No internet connection. Try again later</string>
    <string name="required_task_name">Add task title.</string>
    <string name="required_user_name">Add user name</string>
    <string name="required_reward_title">Add new reward title.</string>
    <string name="label_no_users">No users yet.</string>
    <string name="widget_title">Users</string>
    <string name="title_select_user">Select a user</string>
    <string name="cd_users_avatar">User\'s avatar</string>
    <string name="cd_user_avatar">User avatar</string>
    <string name="add_reward_button">Add reward button</string>
    <string name="label_today">Today</string>
    <string name="cd_add_task_button">Add task button</string>

    <!--Widget-->

</resources>
