<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_task_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewTaskActivity">

    <LinearLayout
        android:id="@+id/task_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_new_reward_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_title_new_reward"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edt_reward_title"
            android:layout_width="@dimen/edit_field_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_reward_name"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <EditText
            android:id="@+id/edt_reward_cost"
            android:layout_width="@dimen/edit_field_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_value"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:drawablePadding="16dp"
            android:drawableEnd="@drawable/ic_coin_grey"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_create" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>