<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewUserActivity">

    <LinearLayout
        android:id="@+id/create_user_group_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_create"
            android:textSize="28sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="@dimen/circle_image_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_new_user"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp"
            android:contentDescription="@string/cd_user_avatar"/>

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="@dimen/edit_field_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_create" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>