<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_tasks_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_add_new_user"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp" />


        <View
            android:id="@+id/divider"
            style="@style/Divider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_balance"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_user_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_coin"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="299" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            style="@style/Divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_no_rewards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="false"
                android:layout_marginTop="50dp"
                android:text="@string/label_no_rewards"
                android:textAlignment="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_rewards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_tasks"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:text="@string/btn_tasks" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_title_rewards"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_add_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_add_btn_green" />

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CoordinatorLayout>